# linear_alg

./: Cargo.toml  README.md  Trunk.toml  index.html  index.scss
docs/: index-1da6b7b3c4ef228f.css  index-668da076dc7f1f87.css  index-a5f9a2b9068161da.css  index.html  linear_alg-17e6416109875cb3.js  linear_alg-17e6416109875cb3_bg.wasm  linear_alg-769ae98d8804e408_bg.wasm  linear_alg-783e1ccea97e0a61.js  linear_alg-783e1ccea97e0a61_bg.wasm  linear_alg-85f2b811ab45aba8.js  linear_alg-85f2b811ab45aba8_bg.wasm  linear_alg-dbe6e0782bcf16cb.js
nannou_ui/: Cargo.toml
public/: index.html  linear_alg-769ae98d8804e408.js  linear_alg-dbe6e0782bcf16cb_bg.wasm
src/: main.rs
src/components/: dimension_input.rs  mat.rs  mat_edit.rs  mod.rs  nav.rs  steps.rs
src/math/: gauss.rs  mat.rs  mod.rs  vec.rs
src/routes/: home.rs
yew_frontend/: Cargo.toml  Trunk.toml  index.scss
yew_frontend/src/: main.rs
yew_frontend/src/components/: mat.rs  mat_edit.rs  mod.rs  steps.rs
yew_frontend/src/routes/: home.rs
