[package]
name = "yew_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linear_alg = { path = "../." }

gloo = "0.8.0"
gloo-utils = "0.1.6"
js-sys = "0.3.60"
num-traits = "0.2.15"
wasm-bindgen = "0.2.83"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0" 

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Node",
    "HtmlHeadElement",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
]
